Исправил ошибки валидатора

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -145,7 +145,7 @@
             </div>
             <div class="product__price-wrapper">
               <p class="product__price">1 500 руб.</p>
-              <svg class="product__cart-icon"width="21" height="18">
+              <svg class="product__cart-icon" width="21" height="18">
                 <use xlink:href="img/sprite.svg#cart"></use>
               </svg>
             </div>
@@ -160,7 +160,7 @@
       </div>
       <div class="creation__video">
         <button class="creation__video-button">
-          <img class="creation__video-icon" src="img/catalog/play.svg" width="101" height="77">
+          <img class="creation__video-icon" src="img/catalog/play.svg" width="101" height="77" alt="Кнопка play">
         </button>
       </div>
       <div class="creation__desc-wrapper">
@@ -196,7 +196,7 @@
   <footer class="page__footer footer">
     <div class="footer__logo">
       <a class="footer__logo-link" href="index.html">
-        <svg class="footer__logo-image" width="102" height="34" alt="Логотип 'Мишка'">
+        <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
           <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
@@ -204,21 +204,21 @@
     <ul class="footer__socials socials">
       <li class="socials__item socials__item--instagram">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="22" height="22" alt="Instagram">
+          <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
             <use xlink:href="img/sprite.svg#instagram"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--facebook">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="15" height="28" alt="Facebook">
+          <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
             <use xlink:href="img/sprite.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--twitter">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="23" height="20" alt="Twitter">
+          <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
             <use xlink:href="img/sprite.svg#twitter"></use>
           </svg>
         </a>
@@ -227,7 +227,7 @@
     <div class="footer__copyright copyright ">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="copyright__desc">Разработано</p>
-        <svg class="copyright__logo" width="27" height="35" alt="Логотип HTML Академии">
+        <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
           <use xlink:href="img/sprite.svg#academy"></use>
         </svg>
       </a>
