--- a/source/index.html
+++ b/source/index.html
@@ -74,8 +74,8 @@
     <section class="promo">
       <div class="promo__title-wrapper">
         <h2 class="promo__title">
-          Милые штуки<br class="promo__break"><pre> </pre>
-          ручной<br><pre> </pre>
+          Милые штуки<br class="promo__break"><code> </code>
+          ручной<br><code> </code>
           работы для дома
         </h2>
       </div>
@@ -127,7 +127,7 @@
           <source srcset="img/index/triple-set-desktop.jpg, img/index/triple-set-desktop@2x.jpg 2x" media="(min-width: 1150px)">
           <source srcset="img/index/triple-set-tablet.jpg, img/index/triple-set-tablet@2x.jpg 2x" media="(min-width: 768px)">
           <img class="main-product__image" src="img/index/triple-set-mobile.jpg"
-            srcset="img/index/triple-set-mobile@2x.jpg 2x" width="260px" height="315px" alt="Три вязанных корзинки">
+            srcset="img/index/triple-set-mobile@2x.jpg 2x" width="260" height="315" alt="Три вязанных корзинки">
         </picture>
         <p class="main-product__price">Цена: 990 руб.</p>
         <button class="main-product__button button">ЗАКАЗАТЬ</button>
@@ -260,7 +260,7 @@
   <footer class="page__footer footer">
     <div class="footer__logo">
       <a class="footer__logo-link" href="index.html">
-        <svg class="footer__logo-image" width="102" height="34" alt="Логотип 'Мишка'">
+        <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
           <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
@@ -268,21 +268,21 @@
     <ul class="footer__socials socials">
       <li class="socials__item socials__item--instagram">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="22" height="22" alt="Instagram">
+          <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
             <use xlink:href="img/sprite.svg#instagram"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--facebook">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="15" height="28" alt="Facebook">
+          <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
             <use xlink:href="img/sprite.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--twitter">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="23" height="20" alt="Twitter">
+          <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
             <use xlink:href="img/sprite.svg#twitter"></use>
           </svg>
         </a>
@@ -291,7 +291,7 @@
     <div class="footer__copyright copyright ">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="copyright__desc">Разработано</p>
-        <svg class="copyright__logo" width="27" height="35" alt="Логотип HTML Академии">
+        <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
           <use xlink:href="img/sprite.svg#academy"></use>
         </svg>
       </a>
