--- a/source/form.html
+++ b/source/form.html
@@ -176,7 +176,7 @@
         <fieldset class="form__item form__item--gray form__item--email">
           <legend class="form__name form__name--mail">E-mail</legend>
           <div class="form__input input input--mail">
-            <input class="input__body " type="mail" name="mail" placeholder="Ваш Email*">
+            <input class="input__body " type="email" name="email" placeholder="Ваш Email*">
             <svg class="input__icon" width="32" height="21">
               <use xlink:href="img/sprite.svg#mail"></use>
             </svg>
@@ -198,7 +198,7 @@
   <footer class="page__footer footer">
     <div class="footer__logo">
       <a class="footer__logo-link" href="index.html">
-        <svg class="footer__logo-image" width="102" height="34" alt="Логотип 'Мишка'">
+        <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
           <use xlink:href="img/sprite.svg#logo-footer"></use>
         </svg>
       </a>
@@ -206,21 +206,21 @@
     <ul class="footer__socials socials">
       <li class="socials__item socials__item--instagram">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="22" height="22" alt="Instagram">
+          <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
             <use xlink:href="img/sprite.svg#instagram"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--facebook">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="15" height="28" alt="Facebook">
+          <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
             <use xlink:href="img/sprite.svg#facebook"></use>
           </svg>
         </a>
       </li>
       <li class="socials__item socials__item--twitter">
         <a class="socials__link" href="#">
-          <svg class="socials__icon" width="23" height="20" alt="Twitter">
+          <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
             <use xlink:href="img/sprite.svg#twitter"></use>
           </svg>
         </a>
@@ -229,7 +229,7 @@
     <div class="footer__copyright copyright ">
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="copyright__desc">Разработано</p>
-        <svg class="copyright__logo" width="27" height="35" alt="Логотип HTML Академии">
+        <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
           <use xlink:href="img/sprite.svg#academy"></use>
         </svg>
       </a>
