--- a/source/index.html
+++ b/source/index.html
@@ -176,10 +176,10 @@
       </ul>
     </section>
 
-    <section class="page__reviews reviews">
+    <section class="reviews">
       <h2 class="reviews__title">Отзывы</h2>
       <div class="reviews__slider slider">
-        <article class="reviews__item review">
+        <article class="slider__item review">
           <p class="review__text">
             Я молодая мама, но всё равно <br>
             фотографии не набирали и близко <br>
