--- a/source/form.html
+++ b/source/form.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="page">
-  <header class="page__heder header">
-    <nav class="header__menu menu menu--closed">
+  <header class="page__heder header header--no-js">
+    <nav class="header__menu menu menu--closed menu--no-js">
       <ul class="menu__list">
         <li class="menu__item menu__item--logo menu__item--active">
           <a class="menu__link menu__link--logo" href="index.html">
