--- a/source/form.html
+++ b/source/form.html
@@ -144,14 +144,14 @@
           <div class="form__input-wrapper">
             <label class="form__label form__label--input" for="input-1">Имя:</label>
             <div class="form__input input">
-              <input class="input__body" id="input-1" type="text" name="name" placeholder="Введите ваше имя*">
+              <input class="input__body" id="input-1" type="text" name="name" placeholder="Введите ваше имя*" required>
             </div>
           </div>
 
           <div class="form__input-wrapper">
             <label class="form__label form__label--input" for="input-2">Фамилия:</label>
             <div class="form__input input">
-              <input class="input__body" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*">
+              <input class="input__body" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*"  required>
             </div>
           </div>
 
@@ -166,7 +166,7 @@
         <fieldset class="form__item form__item--gray form__item--tel">
           <legend class="form__name form__name--tel">ТЕЛ</legend>
           <div class="form__input input input--tel">
-            <input class="input__body" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+            <input class="input__body" type="tel" pattern="+7 [0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*"  required>
             <svg class="input__icon" width="25" height="24">
               <use xlink:href="img/sprite.svg#phone"></use>
             </svg>
@@ -176,7 +176,7 @@
         <fieldset class="form__item form__item--gray form__item--email">
           <legend class="form__name form__name--mail">E-mail</legend>
           <div class="form__input input input--mail">
-            <input class="input__body " type="email" name="email" placeholder="Ваш Email*">
+            <input class="input__body " type="email" name="email" placeholder="Ваш Email*"  required>
             <svg class="input__icon" width="32" height="21">
               <use xlink:href="img/sprite.svg#mail"></use>
             </svg>
