--- a/source/form.html
+++ b/source/form.html
@@ -66,12 +66,11 @@
       </ul>
     </nav>
     <button class="header__button header__button--menu-closed"></button>
-  </header>
-  <main class="page__content content">
     <div class="content__title-wrapper">
       <h1 class="content__title">Вязание на заказ</h1>
     </div>
-
+  </header>
+  <main class="page__content content">
     <section class="content_form form">
       <p class="form__desc">
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы
@@ -79,114 +78,128 @@
       </p>
 
       <form class="form__body">
-        <fieldset class="form__item form__item--radio">
-          <legend class="form__name form__name--type">ТИП</legend>
+        <div class="form__item-container">
+          <fieldset class="form__item form__item--radio">
+            <legend class="form__name form__name--type">ТИП</legend>
 
-          <div class="form__inner-wrapper">
-            <div class="form__radio radio">
-              <input class="radio__input" id="radio-1" name="type" type="radio" value="accessory" checked>
-              <label class="radio__label" for="radio-1">
-                Аксессуар для интерьера
-              </label>
+            <div class="form__inner-wrapper">
+              <div class="form__radio radio">
+                <input class="radio__input" id="radio-1" name="type" type="radio" value="accessory" checked>
+                <label class="radio__label" for="radio-1">
+                  Аксессуар для интерьера
+                </label>
+              </div>
+
+              <div class="form__radio radio">
+                <input class="radio__input" id="radio-2" name="type" type="radio" value="toy">
+                <label class="radio__label" for="radio-2">
+                  Детская игрушка
+                </label>
+              </div>
+
+            </div>
+          </fieldset>
+        </div>
+
+
+        <div class="form__item-container form__item-container--gray">
+          <fieldset class="form__item form__item--checkbox">
+            <legend class="form__name form__name--color">ЦВЕТ</legend>
+
+            <div class="form__checkbox checkbox">
+              <input class="checkbox__input" id="checkbox-1" name="color" type="checkbox" value="white" checked>
+              <label class="checkbox__label" for="checkbox-1">Белый </label>
             </div>
 
-            <div class="form__radio radio">
-              <input class="radio__input" id="radio-2" name="type" type="radio" value="toy">
-              <label class="radio__label" for="radio-2">
-                Детская игрушка
-              </label>
+
+            <div class="form__checkbox checkbox">
+              <input class="checkbox__input" id="checkbox-2" name="color" type="checkbox" value="gray" checked>
+              <label class="checkbox__label" for="checkbox-2">Серый</label>
             </div>
 
-          </div>
-        </fieldset>
 
-        <fieldset class="form__item form__item--gray form__item--checkbox">
-          <legend class="form__name form__name--color">ЦВЕТ</legend>
-
-          <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-1" name="color" type="checkbox" value="white" checked>
-            <label class="checkbox__label" for="checkbox-1">Белый </label>
-          </div>
-
-
-          <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-2" name="color" type="checkbox" value="gray" checked>
-            <label class="checkbox__label" for="checkbox-2">Серый</label>
-          </div>
-
-
-          <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-3" name="color" type="checkbox" value="tiffany">
-            <label class="checkbox__label" for="checkbox-3">«Тиффани»</label>
-          </div>
-
-          <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-4" name="color" type="checkbox" value="black">
-            <label class="checkbox__label" for="checkbox-4">Черный</label>
-          </div>
-
-
-          <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-5" name="color" type="checkbox" value="pink">
-            <label class="checkbox__label" for="checkbox-5">Розовый</label>
-          </div>
-
-
-          <div class="form__checkbox checkbox">
-            <input class="checkbox__input" id="checkbox-6" name="color" type="checkbox" value="orange">
-            <label class="checkbox__label" for="checkbox-6">Оранжевый</label>
-          </div>
-        </fieldset>
-
-        <fieldset class="form__item form__item--fio">
-          <legend class="form__name form__name--fio">ФИО</legend>
-
-          <div class="form__input-wrapper">
-            <label class="form__label form__label--input" for="input-1">Имя:</label>
-            <div class="form__input input">
-              <input class="input__body" id="input-1" type="text" name="name" placeholder="Введите ваше имя*" required>
+            <div class="form__checkbox checkbox">
+              <input class="checkbox__input" id="checkbox-3" name="color" type="checkbox" value="tiffany">
+              <label class="checkbox__label" for="checkbox-3">«Тиффани»</label>
             </div>
-          </div>
 
-          <div class="form__input-wrapper">
-            <label class="form__label form__label--input" for="input-2">Фамилия:</label>
-            <div class="form__input input">
-              <input class="input__body" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*"  required>
+            <div class="form__checkbox checkbox">
+              <input class="checkbox__input" id="checkbox-4" name="color" type="checkbox" value="black">
+              <label class="checkbox__label" for="checkbox-4">Черный</label>
             </div>
-          </div>
 
-          <div class="form__input-wrapper">
-            <label class="form__label form__label--input" for="input-3">Отчество:</label>
-            <div class="form__input input">
-              <input class="input__body" id="input-3" type="text" name="patronymic" placeholder="Отчество, если желаете">
+
+            <div class="form__checkbox checkbox">
+              <input class="checkbox__input" id="checkbox-5" name="color" type="checkbox" value="pink">
+              <label class="checkbox__label" for="checkbox-5">Розовый</label>
             </div>
-          </div>
-        </fieldset>
 
-        <fieldset class="form__item form__item--gray form__item--tel">
-          <legend class="form__name form__name--tel">ТЕЛ</legend>
-          <div class="form__input input input--tel">
-            <input class="input__body" type="tel" pattern="+7 [0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*"  required>
-            <svg class="input__icon" width="25" height="24">
-              <use xlink:href="img/sprite.svg#phone"></use>
-            </svg>
-          </div>
-        </fieldset>
 
-        <fieldset class="form__item form__item--gray form__item--email">
-          <legend class="form__name form__name--mail">E-mail</legend>
-          <div class="form__input input input--mail">
-            <input class="input__body " type="email" name="email" placeholder="Ваш Email*"  required>
-            <svg class="input__icon" width="32" height="21">
-              <use xlink:href="img/sprite.svg#mail"></use>
-            </svg>
-          </div>
-        </fieldset>
+            <div class="form__checkbox checkbox">
+              <input class="checkbox__input" id="checkbox-6" name="color" type="checkbox" value="orange">
+              <label class="checkbox__label" for="checkbox-6">Оранжевый</label>
+            </div>
+          </fieldset>
+        </div>
 
-        <fieldset class="form__item form__item--comment">
-          <legend class="form__name form__name--comment">ДОП</legend>
-          <textarea class="form__textarea textarea" name="comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-        </fieldset>
+
+        <div class="form__item-container">
+          <fieldset class="form__item form__item--fio">
+            <legend class="form__name form__name--fio">ФИО</legend>
+
+            <div class="form__input-wrapper">
+              <label class="form__label form__label--input" for="input-1">Имя:</label>
+              <div class="form__input input">
+                <input class="input__body" id="input-1" type="text" name="name" placeholder="Введите ваше имя*" required>
+              </div>
+            </div>
+
+            <div class="form__input-wrapper">
+              <label class="form__label form__label--input" for="input-2">Фамилия:</label>
+              <div class="form__input input">
+                <input class="input__body" id="input-2" type="text" name="surname" placeholder="Укажите фамилию*"  required>
+              </div>
+            </div>
+
+            <div class="form__input-wrapper">
+              <label class="form__label form__label--input" for="input-3">Отчество:</label>
+              <div class="form__input input">
+                <input class="input__body" id="input-3" type="text" name="patronymic" placeholder="Отчество, если желаете">
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
+        <div class="form__item-container form__item-container--gray">
+          <fieldset class="form__item form__item--gray form__item--tel">
+            <legend class="form__name form__name--tel">ТЕЛ</legend>
+            <div class="form__input input input--tel">
+              <input class="input__body" type="tel" pattern="+7 [0-9]{3} [0-9]{3} [0-9]{2} [0-9]{2}" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*"  required>
+              <svg class="input__icon" width="25" height="24">
+                <use xlink:href="img/sprite.svg#phone"></use>
+              </svg>
+            </div>
+          </fieldset>
+        </div>
+
+        <div class="form__item-container form__item-container--gray">
+          <fieldset class="form__item form__item--gray form__item--email">
+            <legend class="form__name form__name--mail">E-mail</legend>
+            <div class="form__input input input--mail">
+              <input class="input__body " type="email" name="email" placeholder="Ваш Email*"  required>
+              <svg class="input__icon" width="32" height="21">
+                <use xlink:href="img/sprite.svg#mail"></use>
+              </svg>
+            </div>
+          </fieldset>
+        </div>
+
+        <div class="form__item-container">
+          <fieldset class="form__item form__item--comment">
+            <legend class="form__name form__name--comment">ДОП</legend>
+            <textarea class="form__textarea textarea" name="comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </fieldset>
+        </div>
 
         <div class="form__button-container">
           <p class="form__footnote">*Поля обязательны для заполнения</p>
@@ -196,43 +209,45 @@
     </section>
   </main>
   <footer class="page__footer footer">
-    <div class="footer__logo">
-      <a class="footer__logo-link" href="index.html">
-        <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
-          <use xlink:href="img/sprite.svg#logo-footer"></use>
-        </svg>
-      </a>
-    </div>
-    <ul class="footer__socials socials">
-      <li class="socials__item socials__item--instagram">
-        <a class="socials__link" href="#">
-          <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
-            <use xlink:href="img/sprite.svg#instagram"></use>
+    <div class="footer__inner">
+      <div class="footer__logo">
+        <a class="footer__logo-link" href="index.html">
+          <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
           </svg>
         </a>
-      </li>
-      <li class="socials__item socials__item--facebook">
-        <a class="socials__link" href="#">
-          <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
-            <use xlink:href="img/sprite.svg#facebook"></use>
+      </div>
+      <ul class="footer__socials socials">
+        <li class="socials__item socials__item--instagram">
+          <a class="socials__link" href="#">
+            <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
+              <use xlink:href="img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item socials__item--facebook">
+          <a class="socials__link" href="#">
+            <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
+              <use xlink:href="img/sprite.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item socials__item--twitter">
+          <a class="socials__link" href="#">
+            <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
+              <use xlink:href="img/sprite.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__copyright copyright ">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <p class="copyright__desc">Разработано</p>
+          <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
+            <use xlink:href="img/sprite.svg#academy"></use>
           </svg>
         </a>
-      </li>
-      <li class="socials__item socials__item--twitter">
-        <a class="socials__link" href="#">
-          <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
-            <use xlink:href="img/sprite.svg#twitter"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright ">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <p class="copyright__desc">Разработано</p>
-        <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
-          <use xlink:href="img/sprite.svg#academy"></use>
-        </svg>
-      </a>
+      </div>
     </div>
   </footer>
   <script src="scripts/mobile-menu.js"></script>
