--- a/source/index.html
+++ b/source/index.html
@@ -15,52 +15,68 @@
       <ul class="menu__list">
         <li class="menu__item menu__item--logo menu__item--active">
           <a class="menu__link menu__link--logo" href="index.html">
-            <picture>
-              <source srcset="img/mishka-logo-desktop.svg" media="(min-width: 1150px)">
-              <source srcset="img/mishka-logo-tablet.svg" media="(min-width: 768px)">
-              <img class="menu__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
-            </picture>
+            <div class="menu__link-inner">
+              <picture>
+                <source srcset="img/mishka-logo-desktop.svg" media="(min-width: 1150px)">
+                <source srcset="img/mishka-logo-tablet.svg" media="(min-width: 768px)">
+                <img class="menu__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
+              </picture>
+            </div>
           </a>
         </li>
         <li class="menu__item menu__item--catalog">
           <a class="menu__link" href="catalog.html">
-            <span class="menu__text">Каталог товаров</span>
+            <div class="menu__link-inner">
+              <span class="menu__text">Каталог товаров</span>
+            </div>
           </a>
         </li>
         <li class="menu__item menu__item--form">
           <a class="menu__link" href="form.html">
-            <span class="menu__text">Вязание на заказ</span>
+            <div class="menu__link-inner">
+              <span class="menu__text">Вязание на заказ</span>
+            </div>
           </a>
         </li>
         <li class="menu__item menu__item--search">
           <a class="menu__link" href="">
-            <svg class="menu__icon" width="18" height="18">
-              <use xlink:href="img/sprite.svg#search"></use>
-            </svg>
-            <span class="menu__text">Поиск по сайту</span>
+            <div class="menu__link-inner">
+              <svg class="menu__icon" width="18" height="18">
+                <use xlink:href="img/sprite.svg#search"></use>
+              </svg>
+              <span class="menu__text">Поиск по сайту</span>
+            </div>
           </a>
         </li>
         <li class="menu__item menu__item--cart">
           <a class="menu__link" href="">
-            <svg class="menu__icon" width="21" height="18">
-              <use xlink:href="img/sprite.svg#cart"></use>
-            </svg>
-            <span class="menu__text">Корзина: пока пуста</span>
+            <div class="menu__link-inner">
+              <svg class="menu__icon" width="21" height="18">
+                <use xlink:href="img/sprite.svg#cart"></use>
+              </svg>
+              <span class="menu__text">Корзина: пока пуста</span>
+            </div>
           </a>
         </li>
         <li class="menu__item menu__item--delivery menu__item--tablet">
           <a class="menu__link" href="">
-            <span class="menu__text">Бесплатная доставка по России</span>
+            <div class="menu__link-inner">
+              <span class="menu__text">Бесплатная доставка по России</span>
+            </div>
           </a>
         </li>
         <li class="menu__item  menu__item--new menu__item--desktop">
           <a class="menu__link" href="">
-            <span class="menu__text">Новые поступления</span>
+            <div class="menu__link-inner">
+              <span class="menu__text">Новые поступления</span>
+            </div>
           </a>
         </li>
         <li class="menu__item menu__item--sale menu__item--desktop">
           <a class="menu__link" href="">
-            <span class="menu__text">Распродажа</span>
+            <div class="menu__link-inner">
+              <span class="menu__text">Распродажа</span>
+            </div>
           </a>
         </li>
       </ul>
