--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,63 +10,76 @@
 </head>
 
 <body class="page">
-  <header class="page__heder header header--no-js">
-    <nav class="header__menu menu menu--closed menu--no-js">
-      <ul class="menu__list">
-        <li class="menu__item menu__item--logo menu__item--active">
-          <a class="menu__link menu__link--logo" href="index.html">
+  <nav class="header__menu menu menu--closed menu--no-js">
+    <ul class="menu__list">
+      <li class="menu__item menu__item--logo menu__item--active">
+        <a class="menu__link menu__link--logo" href="index.html">
+          <div class="menu__link-inner">
             <picture>
               <source srcset="img/mishka-logo-desktop.svg" media="(min-width: 1150px)">
               <source srcset="img/mishka-logo-tablet.svg" media="(min-width: 768px)">
               <img class="menu__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
             </picture>
-          </a>
-        </li>
-        <li class="menu__item menu__item--catalog">
-          <a class="menu__link" href="catalog.html">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item menu__item--catalog">
+        <a class="menu__link" href="catalog.html">
+          <div class="menu__link-inner">
             <span class="menu__text">Каталог товаров</span>
-          </a>
-        </li>
-        <li class="menu__item menu__item--form">
-          <a class="menu__link" href="form.html">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item menu__item--form">
+        <a class="menu__link" href="form.html">
+          <div class="menu__link-inner">
             <span class="menu__text">Вязание на заказ</span>
-          </a>
-        </li>
-        <li class="menu__item menu__item--search">
-          <a class="menu__link" href="">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item menu__item--search">
+        <a class="menu__link" href="">
+          <div class="menu__link-inner">
             <svg class="menu__icon" width="18" height="18">
               <use xlink:href="img/sprite.svg#search"></use>
             </svg>
             <span class="menu__text">Поиск по сайту</span>
-          </a>
-        </li>
-        <li class="menu__item menu__item--cart">
-          <a class="menu__link" href="">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item menu__item--cart">
+        <a class="menu__link" href="">
+          <div class="menu__link-inner">
             <svg class="menu__icon" width="21" height="18">
               <use xlink:href="img/sprite.svg#cart"></use>
             </svg>
             <span class="menu__text">Корзина: пока пуста</span>
-          </a>
-        </li>
-        <li class="menu__item menu__item--delivery menu__item--tablet">
-          <a class="menu__link" href="">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item menu__item--delivery menu__item--tablet">
+        <a class="menu__link" href="">
+          <div class="menu__link-inner">
             <span class="menu__text">Бесплатная доставка по России</span>
-          </a>
-        </li>
-        <li class="menu__item  menu__item--new menu__item--desktop">
-          <a class="menu__link" href="">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item  menu__item--new menu__item--desktop">
+        <a class="menu__link" href="">
+          <div class="menu__link-inner">
             <span class="menu__text">Новые поступления</span>
-          </a>
-        </li>
-        <li class="menu__item menu__item--sale menu__item--desktop">
-          <a class="menu__link" href="">
+          </div>
+        </a>
+      </li>
+      <li class="menu__item menu__item--sale menu__item--desktop">
+        <a class="menu__link" href="">
+          <div class="menu__link-inner">
             <span class="menu__text">Распродажа</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <button class="header__button header__button--menu-closed"></button>
-  </header>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </nav>
   <main class="page__content content content--catalog">
     <div class="content__title-wrapper">
       <h1 class="content__title">Каталог товаров</h1>
