--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,81 +10,83 @@
 </head>
 
 <body class="page">
-  <nav class="header__menu menu menu--closed menu--no-js">
-    <ul class="menu__list">
-      <li class="menu__item menu__item--logo menu__item--active">
-        <a class="menu__link menu__link--logo" href="index.html">
-          <div class="menu__link-inner">
-            <picture>
-              <source srcset="img/mishka-logo-desktop.svg" media="(min-width: 1150px)">
-              <source srcset="img/mishka-logo-tablet.svg" media="(min-width: 768px)">
-              <img class="menu__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
-            </picture>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item menu__item--catalog">
-        <a class="menu__link" href="catalog.html">
-          <div class="menu__link-inner">
-            <span class="menu__text">Каталог товаров</span>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item menu__item--form">
-        <a class="menu__link" href="form.html">
-          <div class="menu__link-inner">
-            <span class="menu__text">Вязание на заказ</span>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item menu__item--search">
-        <a class="menu__link" href="">
-          <div class="menu__link-inner">
-            <svg class="menu__icon" width="18" height="18">
-              <use xlink:href="img/sprite.svg#search"></use>
-            </svg>
-            <span class="menu__text">Поиск по сайту</span>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item menu__item--cart">
-        <a class="menu__link" href="">
-          <div class="menu__link-inner">
-            <svg class="menu__icon" width="21" height="18">
-              <use xlink:href="img/sprite.svg#cart"></use>
-            </svg>
-            <span class="menu__text">Корзина: пока пуста</span>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item menu__item--delivery menu__item--tablet">
-        <a class="menu__link" href="">
-          <div class="menu__link-inner">
-            <span class="menu__text">Бесплатная доставка по России</span>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item  menu__item--new menu__item--desktop">
-        <a class="menu__link" href="">
-          <div class="menu__link-inner">
-            <span class="menu__text">Новые поступления</span>
-          </div>
-        </a>
-      </li>
-      <li class="menu__item menu__item--sale menu__item--desktop">
-        <a class="menu__link" href="">
-          <div class="menu__link-inner">
-            <span class="menu__text">Распродажа</span>
-          </div>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <main class="page__content content content--catalog">
-    <div class="content__title-wrapper">
-      <h1 class="content__title">Каталог товаров</h1>
+  <header class="page__heder header header--no-js">
+    <nav class="header__menu menu menu--closed menu--no-js">
+      <ul class="menu__list">
+        <li class="menu__item menu__item--logo menu__item--active">
+          <a class="menu__link menu__link--logo" href="index.html">
+            <div class="menu__link-inner">
+              <picture>
+                <source srcset="img/mishka-logo-desktop.svg" media="(min-width: 1150px)">
+                <source srcset="img/mishka-logo-tablet.svg" media="(min-width: 768px)">
+                <img class="menu__image" src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Логотип 'Мишка'">
+              </picture>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item menu__item--catalog">
+          <a class="menu__link" href="catalog.html">
+            <div class="menu__link-inner">
+              <span class="menu__text">Каталог товаров</span>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item menu__item--form">
+          <a class="menu__link" href="form.html">
+            <div class="menu__link-inner">
+              <span class="menu__text">Вязание на заказ</span>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item menu__item--search">
+          <a class="menu__link" href="">
+            <div class="menu__link-inner">
+              <svg class="menu__icon" width="18" height="18">
+                <use xlink:href="img/sprite.svg#search"></use>
+              </svg>
+              <span class="menu__text">Поиск по сайту</span>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item menu__item--cart">
+          <a class="menu__link" href="">
+            <div class="menu__link-inner">
+              <svg class="menu__icon" width="21" height="18">
+                <use xlink:href="img/sprite.svg#cart"></use>
+              </svg>
+              <span class="menu__text">Корзина: пока пуста</span>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item menu__item--delivery menu__item--tablet">
+          <a class="menu__link" href="">
+            <div class="menu__link-inner">
+              <span class="menu__text">Бесплатная доставка по России</span>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item  menu__item--new menu__item--desktop">
+          <a class="menu__link" href="">
+            <div class="menu__link-inner">
+              <span class="menu__text">Новые поступления</span>
+            </div>
+          </a>
+        </li>
+        <li class="menu__item menu__item--sale menu__item--desktop">
+          <a class="menu__link" href="">
+            <div class="menu__link-inner">
+              <span class="menu__text">Распродажа</span>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <button class="header__button header__button--menu-closed"></button>
+    <div class="header__title-wrapper">
+      <h1 class="header__title">Каталог товаров</h1>
     </div>
-
+  </header>
+  <main class="page__content content content--catalog">
     <section class="content__products products">
       <ul class="products__list">
         <li class="products__item product">
@@ -209,43 +211,45 @@
   <div class="page__overlay overlay"></div>
 
   <footer class="page__footer footer">
-    <div class="footer__logo">
-      <a class="footer__logo-link" href="index.html">
-        <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
-          <use xlink:href="img/sprite.svg#logo-footer"></use>
-        </svg>
-      </a>
-    </div>
-    <ul class="footer__socials socials">
-      <li class="socials__item socials__item--instagram">
-        <a class="socials__link" href="#">
-          <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
-            <use xlink:href="img/sprite.svg#instagram"></use>
+    <div class="footer__inner">
+      <div class="footer__logo">
+        <a class="footer__logo-link" href="index.html">
+          <svg class="footer__logo-image" width="102" height="34" role="img" aria-label="Логотип 'Мишка'">
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
           </svg>
         </a>
-      </li>
-      <li class="socials__item socials__item--facebook">
-        <a class="socials__link" href="#">
-          <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
-            <use xlink:href="img/sprite.svg#facebook"></use>
+      </div>
+      <ul class="footer__socials socials">
+        <li class="socials__item socials__item--instagram">
+          <a class="socials__link" href="#">
+            <svg class="socials__icon" width="22" height="22" role="img" aria-label="Instagram">
+              <use xlink:href="img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item socials__item--facebook">
+          <a class="socials__link" href="#">
+            <svg class="socials__icon" width="15" height="28" role="img" aria-label="Facebook">
+              <use xlink:href="img/sprite.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item socials__item--twitter">
+          <a class="socials__link" href="#">
+            <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
+              <use xlink:href="img/sprite.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__copyright copyright ">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <p class="copyright__desc">Разработано</p>
+          <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
+            <use xlink:href="img/sprite.svg#academy"></use>
           </svg>
         </a>
-      </li>
-      <li class="socials__item socials__item--twitter">
-        <a class="socials__link" href="#">
-          <svg class="socials__icon" width="23" height="20" role="img" aria-label="Twitter">
-            <use xlink:href="img/sprite.svg#twitter"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright ">
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <p class="copyright__desc">Разработано</p>
-        <svg class="copyright__logo" width="27" height="35" role="img" aria-label="Логотип HTML Академии">
-          <use xlink:href="img/sprite.svg#academy"></use>
-        </svg>
-      </a>
+      </div>
     </div>
   </footer>
   <script src="scripts/mobile-menu.js"></script>
